--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
+    "mongodb": "^3.6.0",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
