--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-feather": "^2.0.8",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
