--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.3.0",
+    "@fullcalendar/daygrid": "^5.3.0",
+    "@fullcalendar/react": "^5.3.0",
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "leaflet": "^1.6.0",
     "mongodb": "^3.6.0",
     "next": "9.5.2",
+    "next-transpile-modules": "^4.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-feather": "^2.0.8",
